--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   text-align: left;
+    color: #e2e3ed;
 }
 
 ul,
@@ -119,12 +120,15 @@ a {
 h2 {
   font-family: 'Poppins',sans-serif;
   font-size: 1.875em;
+    font-weight: 500;
 }
 
 h3,
 h4 {
   font-family: 'Poppins',sans-serif;
+  font-weight: 500;
   font-size: 1.125em;
+  margin: 20px 0;
 }
 
 p {
@@ -152,6 +156,7 @@ address {
 
 header,
 footer {
+  background-color: #202322;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -171,17 +176,21 @@ header .content-wrapper {
 }
 
 .header-divider {
+  background: #3a3a3a;
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
 }
 
 header nav {
+  width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
-  width: 60%;
 }
 
 header nav ul {
@@ -190,8 +199,13 @@ header nav ul {
   width: 100%;
 }
 
+header nav ul li {
+  font-size: 1.125em;
+}
+
 footer {
   flex-direction: column;
+  text-align: center;
 }
 
 footer p {
@@ -233,18 +247,55 @@ footer .copyright {
   flex-flow: row wrap;
 }
 
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
 /* Aside */
 
+aside .form {
+  margin-top: 30px;
+}
 aside {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
+aside .form{
+  margin-top: 30px;
+}
 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
 /* Features */
 
 .features {
+  background: url('../img/unplugged-retreat-features.jpg');
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -273,6 +324,7 @@ aside {
 /* Reviews */
 
 .reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -280,6 +332,7 @@ aside {
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -292,6 +345,7 @@ aside {
    ========================================================================== */
 
 .mission {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -299,6 +353,7 @@ aside {
 }
 
 .contact-section {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -314,6 +369,7 @@ aside {
    ========================================================================== */
 
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -330,10 +386,14 @@ aside {
 
 .faq h2 {
   margin-bottom: 40px;
+    line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px;
+}
+.faq-content h4 {
+  line-height: 1.333;
 }
 
 /* ==========================================================================
@@ -417,7 +477,6 @@ aside {
 
 .clearfix:after {
   clear: both;
-}
 
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
@@ -425,78 +484,350 @@ aside {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
+   @media only screen and (min-width:768px) {
+     /*Tablet styles here*/
 
-@media print,
-(-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 1.25dppx),
-(min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
+     /* General styles */
+     .content-wrapper {
+       max-width: 640px;
+       margin: 100px 0;
+     }
 
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
+     h2 {
+       font-size: 2.25em;
+       line-height: 1.333;
+   }
 
-@media print {
-  *,
-  *:before,
-  *:after {
-    background: transparent !important;
-    color: #000 !important;
-    /* Black prints faster */
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
-  /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-  a[href^="#"]:after,
-  a[href^="javascript:"]:after {
-    content: "";
-  }
-  pre {
-    white-space: pre-wrap !important;
-  }
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
-  /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-  thead {
-    display: table-header-group;
-  }
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
+   h3 {
+       font-size: 1.5em;
+       line-height: 1.25;
+   }
+
+     /* Header */
+     header {
+       justify-content: space-around;
+       padding: 33px 0;
+     }
+
+     header .content-wrapper {
+       width: 100%;
+       justify-content: space-between;
+     }
+
+     header figure {
+       width: 30%;
+     }
+
+     header nav {
+       width: 20%;
+     }
+
+     header nav ul {
+       justify-content: space-between;
+     }
+
+     .header-divider {
+       display: none;
+     }
+     /* Hero Area */
+
+     .hero-area h1 {
+       font-size: 3em;
+       line-height: 1;
+       margin: 0;
+   }
+
+     /* Aside */
+     aside .content-wrapper {
+       margin: 50px 0;
+       display: flex;
+       justify-content: space-between;
+       flex-flow: row wrap;
+     }
+
+     aside .content-wrapper .form-description,
+     aside .content-wrapper .form {
+       width: 40%;
+       margin: 0;
+     }
+
+     /* Features */
+
+     .features h2 {
+       margin-bottom: 20px;
+     }
+
+     .features article {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       flex-flow: column wrap;
+       flex-basis: 50%;
+     }
+
+     .features .features-item-description {
+       width: 62%;
+     }
+
+     /* Reviews */
+     .reviews article {
+       display: flex;
+       justify-content: space-between;
+     }
+
+     .reviews h2 {
+       width: 85%;
+     }
+
+     .reviews article div {
+       width: 49%;
+     }
+
+     .reviews h3 {
+       width: 75%;
+       margin: 0;
+   }
+     /* Footer */
+     footer .content-wrapper {
+       width: 65%;
+       margin: 100px 0;
+     }
+
+     footer .footer-content {
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+       flex-direction: row;
+     }
+
+     footer .contact {
+       margin-bottom: 0;
+     }
+
+     footer h4 {
+       font-size: 1.5em;
+       margin-bottom: 40px;
+     }
+
+     footer p {
+         line-height: 1.285;
+     }
+
+     footer .copyright {
+       width: 100%;
+     }
+
+     /* ==========================================================================
+      About Page
+      ========================================================================== */
+
+     .mission-content {
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+       padding-top: 20px;
+     }
+
+     .mission-content p {
+       width: 45%;
+     }
+
+     .contact-section .content-wrapper h2 {
+       width: 80%;
+     }
+
+     .contact-content {
+       display: flex;
+       justify-content: space-between;
+       align-items: flex-start;
+     }
+
+     .contact-content h4 {
+       font-size: 1.5em;
+     }
+
+     /* ==========================================================================
+      FAQ Page
+      ========================================================================== */
+
+     .faq .content-wrapper {
+       justify-content: space-between;
+     }
+
+     .faq-content {
+       flex-basis: 45%;
+     }
+
+     .faq h2 {
+       width: 100%;
+     }
+
+     .faq h4,
+     .faq p {
+         font-size: .875em;
+         line-height: 1.125;
+     }
+   }
+
+   @media only screen and (min-width:1200px) {
+     /*Desktop styles here*/
+
+     header {
+       padding: 15px 0;
+     }
+
+     .content-wrapper {
+       max-width: 960px;
+     }
+
+     h2 {
+       font-size: 2.25em;
+     }
+
+     h3,
+     h4 {
+         font-size: 1.875em;
+     }
+
+     p {
+         font-size: 1.125em;
+         line-height: 1.333;
+     }
+     /* Hero */
+     .hero-area h1 {
+       font-size: 3.75em;
+       width: 60%;
+   }
+
+     /* Aside */
+     aside .content-wrapper {
+       justify-content: space-around;
+     }
+
+     aside .content-wrapper .form-description,
+     aside .content-wrapper .form {
+       width: 30%;
+     }
+
+     .form-description p {
+       font-size: 1.125em;
+     }
+
+     /* Features */
+
+     .features h2 {
+       width: 90%;
+     }
+
+     .features article {
+       flex-basis: 33%;
+     }
+
+     /* Reviews */
+
+     .reviews h2 {
+       padding-bottom: 50px;
+     }
+
+     .reviews article div {
+       width: 42%;
+     }
+
+     footer h4 {
+       font-size: 1.875em;
+     }
+
+     /* ==========================================================================
+     About Page
+     ========================================================================== */
+
+     .mission h2,
+     .contact-section .content-wrapper h2 {
+         width: 95%;
+         font-size: 3em;
+     }
+
+     .contact-content h4 {
+       font-size: 1.875em;
+     }
+
+     /* ==========================================================================
+     FAQ Page
+     ========================================================================== */
+     .faq h2 {
+       width: 100%;
+       font-size: 3em;
+     }
+
+     .faq h4,
+     .faq p {
+         font-size: 1.125em;
+         line-height: 1;
+     }
+   }
+
+   /* ==========================================================================
+      Print styles.
+      Inlined to avoid the additional HTTP request:
+      https://www.phpied.com/delay-loading-your-print-css/
+      ========================================================================== */
+
+   @media print {
+     *,
+     *:before,
+     *:after {
+       background: transparent !important;
+       color: #000 !important;
+       /* Black prints faster */
+       -webkit-box-shadow: none !important;
+       box-shadow: none !important;
+       text-shadow: none !important;
+     }
+     a,
+     a:visited {
+       text-decoration: underline;
+     }
+     a[href]:after {
+       content: " (" attr(href) ")";
+     }
+     abbr[title]:after {
+       content: " (" attr(title) ")";
+     }
+     /*
+        * Don't show links that are fragment identifiers,
+        * or use the `javascript:` pseudo protocol
+        */
+     a[href^="#"]:after,
+     a[href^="javascript:"]:after {
+       content: "";
+     }
+     pre {
+       white-space: pre-wrap !important;
+     }
+     pre,
+     blockquote {
+       border: 1px solid #999;
+       page-break-inside: avoid;
+     }
+     /*
+        * Printing Tables:
+        * http://css-discuss.incutio.com/wiki/Printing_Tables
+        */
+     thead {
+       display: table-header-group;
+     }
+     tr,
+     img {
+       page-break-inside: avoid;
+     }
+     p,
+     h2,
+     h3 {
+       orphans: 3;
+       widows: 3;
+     }
+     h2,
+     h3 {
+       page-break-after: avoid;
+     }
+   }
